# apalis-diesel-postgres

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: rust.yml
examples/: outbox.rs  worker-ntex.rs  worker.rs
migrations/00000000000000_create_apalis/: down.sql  up.sql
migrations/20260521000000_harden_apalis_sql/: down.sql  up.sql
migrations/20260521000001_statement_level_notify/: down.sql  up.sql
migrations/20260521000002_worker_lease_token/: down.sql  up.sql
migrations/20260521000003_queue_stats_snapshot/: down.sql  up.sql
migrations/20260521000004_dequeue_index_tighten/: down.sql  up.sql
migrations/20260521000005_notify_new_jobs_search_path/: down.sql  up.sql
migrations/20260521000006_notify_new_jobs_fast_path/: down.sql  up.sql
scripts/: context7-mcp  dev-setup.sh  github-mcp
src/: ack.rs  admin.rs  error.rs  fetcher.rs  lib.rs  lifecycle.rs  models.rs  notify_event.rs  pool.rs  runtime.rs  schema.rs  shared.rs  sink.rs
src/queries/: ack.rs  admin.rs  fetch.rs  metrics.rs  migrations.rs  mod.rs  notify.rs  push.rs  worker.rs
tests/: postgres_lifecycle.rs  postgres_migration_concurrency.rs  postgres_notify_shared.rs  postgres_outbox.rs  postgres_queries.rs  postgres_specs.rs  postgres_worker_integration.rs  spec_queries_admin.rs  spec_queries_fetch.rs  spec_queries_notify.rs  spec_queries_worker.rs
tests/support/: mod.rs
