[package]
name = "apalis-diesel-postgres"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
description = "PostgreSQL storage backend for Apalis implemented with Diesel."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexeyMatskevich/apalis-diesel-postgres"
documentation = "https://docs.rs/apalis-diesel-postgres"
readme = "README.md"
keywords = ["apalis", "diesel", "postgres", "jobs", "queue"]
categories = ["asynchronous", "database"]
authors = ["Aleksey Matskevich"]
exclude = [
    ".env.example",
    ".github/",
    ".gitignore",
    ".zed/",
    ".venv/",
    "flake.lock",
    "flake.nix",
    "scripts/",
]

[dependencies]
apalis-codec = { version = "0.1.0-rc.9", features = ["json"] }
apalis-core = { version = "1.0.0-rc.9", default-features = false, features = ["sleep"] }
apalis-sql = { version = "1.0.0-rc.9" }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.3", features = ["postgres", "r2d2", "chrono", "serde_json"] }
diesel_migrations = "2.3"
futures = "0.3"
ntex-rt = { version = "3.12", optional = true }
pin-project = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"], optional = true }
ulid = { version = "1", features = ["serde"] }

[dev-dependencies]
apalis = "1.0.0-rc.9"
lets_expect = { version = "0.5", features = ["tokio"] }
ntex = { version = "3", default-features = false, features = ["neon-polling"] }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
ntex = ["dep:ntex-rt"]

[[example]]
name = "outbox"
required-features = ["tokio"]

[[example]]
name = "worker"
required-features = ["tokio"]

[[example]]
name = "worker-ntex"
required-features = ["ntex"]
